--- a/abbaco-spa/package.json
+++ b/abbaco-spa/package.json
@@ -10,8 +10,12 @@
     "@types/node": "^12.12.44",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-injection": "^1.2.2",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.5"
   },
