--- a/abbaco-spa/package.json
+++ b/abbaco-spa/package.json
@@ -12,11 +12,13 @@
     "@types/react-dom": "^16.9.8",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-injection": "^1.2.2",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-select": "^3.0.13"
   }
 }
